# finam-trade-api-aparfenov-ext

./: .gitignore
.github/workflows/: build_go_proto.yml  build_sdk_proto.yml  publish_js_proto.yml  publish_python.yml  publish_sdk_proto.yml  python_test.yml
docs/swagger/: api.swagger.json
examples/kotlin/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
examples/kotlin/src/test/kotlin/: GetAccountTest.kt
go/: README.md
go/grpc/gateway/protoc_gen_openapiv2/options/: annotations.pb.go  openapiv2.pb.go
go/grpc/tradeapi/v1/accounts/: accounts_service.pb.go
go/grpc/tradeapi/v1/assets/: assets_service.pb.go  assets_service_grpc.pb.go
go/grpc/tradeapi/v1/auth/: auth_service.pb.go
go/grpc/tradeapi/v1/corporateactions/: corporate_actions_service.pb.go  corporate_actions_service_grpc.pb.go
go/grpc/tradeapi/v1/marketdata/: marketdata_service.pb.go
go/grpc/tradeapi/v1/metrics/: usage_metrics_service.pb.go  usage_metrics_service_grpc.pb.go
go/grpc/tradeapi/v1/orders/: orders_service.pb.go  orders_service_grpc.pb.go
go/grpc/tradeapi/v1/reports/: reports_service.pb.go  reports_service_grpc.pb.go
js/: README.md  buf.gen.yaml  package-lock.json  package.json  publishPackage.js
kotlin/: build.gradle.kts  gradle.properties
kotlin/examples/: build.gradle.kts
kotlin/examples/src/main/kotlin/example/: GetAccount.kt
kotlin/sdk/: build.gradle.kts
kotlin/sdk/src/main/kotlin/ru/finam/tradeapi/: client.kt
proto/grpc/tradeapi/v1/: side.proto
proto/grpc/tradeapi/v1/accounts/: accounts_service.proto
proto/grpc/tradeapi/v1/assets/: assets_service.proto
proto/grpc/tradeapi/v1/auth/: auth_service.proto
proto/grpc/tradeapi/v1/corporateactions/: corporate_actions_service.proto
proto/grpc/tradeapi/v1/marketdata/: marketdata_service.proto
proto/grpc/tradeapi/v1/metrics/: usage_metrics_service.proto
proto/grpc/tradeapi/v1/orders/: orders_service.proto
proto/grpc/tradeapi/v1/reports/: reports_service.proto
proto/protoc_gen_openapiv2/options/: annotations.proto  openapiv2.proto
python/: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASING.md  pyproject.toml
python/examples/: auth_and_account.py  place_limit_order.py  subscribe_quotes_async.py
python/finam_trade_api/: __init__.py  _metadata.py  accounts.py  aio.py  assets.py  auth.py  auth_messages.py  client.py  exceptions.py  market_data.py  metrics.py  orders.py  reports.py  retry.py
python/scripts/: _fix_proto_imports.py  generate_proto.sh
python/tests/: conftest.py  fakes.py  test_auth_manager.py  test_client_integration.py  test_exceptions.py  test_metadata.py  test_retry.py  test_shims.py
sdk/kotlin/: build.gradle.kts  gradle.properties  settings.gradle.kts
sdk/kotlin/src/main/proto/google/type/: interval.proto
