[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finam-trade-api"
version = "0.1.0"
description = "Python SDK for Finam Trade API (gRPC)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Finam" }]
keywords = ["finam", "trading", "grpc", "trade-api", "brokerage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
    "protobuf>=4.25",
    "googleapis-common-protos>=1.62",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4",
    "mypy>=1.8",
    "mypy-protobuf>=3.6",
    "ruff>=0.3",
]

[project.urls]
Homepage = "https://github.com/FinamWeb/finam-trade-api"
Documentation = "https://tradeapi.finam.ru/"
Repository = "https://github.com/FinamWeb/finam-trade-api"

[tool.setuptools.packages.find]
where = ["."]
include = ["finam_trade_api*", "finam_trade_api.proto*"]

[tool.setuptools.package-data]
"finam_trade_api" = ["py.typed"]
# Ship generated type stubs (.pyi) alongside the runtime modules so downstream
# type-checkers see the proto messages with their full field types.
"finam_trade_api.proto" = ["**/*.pyi"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["finam_trade_api"]
omit = [
    "finam_trade_api/proto/*",  # generated code
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false
